# hero-game

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
assets/shaders/: fragment.glsl
scripts/: run.sh
src/: main.cpp
src/game/: Game.h  Level.h  Player.h
src/interfaces/: IGameObject.h  ILevel.h
src/rendering/: LightSource.h  Shader.h
